# simpleflow

./: .gitignore  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: main.py
backend/api/: endpoints.py
backend/core/: config.py  security.py
backend/domain/: db.py
backend/internal/oauth/: router.py
backend/internal/pipeline/: router.py
backend/internal/user/: router.py  schema.py
backend/middleware/: auth.py  db.py
backend/migration/: env.py
backend/migration/versions/: 6ea762f39c42_init_user_and_pipeline.py
backend/models/: __init__.py  base_model.py  pipeline.py  user.py
backend/utils/: routes.py
